packages/preview/sprintf/0.1.0/.nim_runtime/tests/errmsgs/trecursiveproctype4.nim
discard """
  errormsg: "illegal recursion in type 'BB'"
  line: 9
"""

# issue #23885

type
  EventHandler = proc(target: BB)
  BB = (EventHandler,)
